implement hero section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from '@/layouts/Layout.astro'
+import Hero from '@/sections/Hero.astro'
 ---
 
 <Layout title='Chimboteros'>
-  <h1 class='text-5xl text-[#02CCFF]'>Chimboteros</h1>
+  <Hero />
 </Layout>
