--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from '@/layouts/Layout.astro'
 import Hero from '@/sections/Hero.astro'
+import Introduction from '@/sections/Introduction.astro'
 ---
 
 <Layout title='Chimboteros Perú | Creaciones Culturales'>
   <Hero />
+  <Introduction />
 </Layout>
