add creaciones section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '@/layouts/Layout.astro'
+import Creaciones from '@/sections/Creaciones.astro'
 import Hero from '@/sections/Hero.astro'
 import Introduction from '@/sections/Introduction.astro'
 ---
@@ -7,4 +8,5 @@ import Introduction from '@/sections/Introduction.astro'
 <Layout title='Chimboteros Perú | Creaciones Culturales'>
   <Hero />
   <Introduction />
+  <Creaciones />
 </Layout>
