add process section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,12 @@ import Layout from '@/layouts/Layout.astro'
 import Creaciones from '@/sections/Creaciones.astro'
 import Hero from '@/sections/Hero.astro'
 import Introduction from '@/sections/Introduction.astro'
+import Proceso from '@/sections/Proceso.astro'
 ---
 
 <Layout title='Chimboteros Perú | Creaciones Culturales'>
   <Hero />
   <Introduction />
   <Creaciones />
+  <Proceso />
 </Layout>
