add products section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Creaciones from '@/sections/Creaciones.astro'
 import Hero from '@/sections/Hero.astro'
 import Introduction from '@/sections/Introduction.astro'
 import Proceso from '@/sections/Proceso.astro'
+import Productos from '@/sections/Productos.astro'
 ---
 
 <Layout title='Chimboteros Perú | Creaciones Culturales'>
@@ -11,4 +12,5 @@ import Proceso from '@/sections/Proceso.astro'
   <Introduction />
   <Creaciones />
   <Proceso />
+  <Productos />
 </Layout>
