add team section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '@/layouts/Layout.astro'
 import Creaciones from '@/sections/Creaciones.astro'
+import Equipo from '@/sections/Equipo.astro'
 import Hero from '@/sections/Hero.astro'
 import Introduction from '@/sections/Introduction.astro'
 import Proceso from '@/sections/Proceso.astro'
@@ -13,4 +14,5 @@ import Productos from '@/sections/Productos.astro'
   <Creaciones />
   <Proceso />
   <Productos />
+  <Equipo />
 </Layout>
