add allies section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '@/layouts/Layout.astro'
+import Aliados from '@/sections/Aliados.astro'
 import Creaciones from '@/sections/Creaciones.astro'
 import Equipo from '@/sections/Equipo.astro'
 import Hero from '@/sections/Hero.astro'
@@ -15,4 +16,5 @@ import Productos from '@/sections/Productos.astro'
   <Proceso />
   <Productos />
   <Equipo />
+  <Aliados />
 </Layout>
