build ui for contact section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '@/layouts/Layout.astro'
 import Aliados from '@/sections/Aliados.astro'
+import Contacto from '@/sections/Contacto.astro'
 import Creaciones from '@/sections/Creaciones.astro'
 import Equipo from '@/sections/Equipo.astro'
 import Hero from '@/sections/Hero.astro'
@@ -17,4 +18,5 @@ import Productos from '@/sections/Productos.astro'
   <Productos />
   <Equipo />
   <Aliados />
+  <Contacto />
 </Layout>
