--- a/src/sections/Contacto.astro
+++ b/src/sections/Contacto.astro
@@ -8,6 +8,9 @@
     </div>
 
     <form
+      name='contact'
+      method='POST'
+      data-netlify='true'
       class='relative lg:static top-48 lg:top-0 w-10/12 mx-auto grid lg:grid-cols-2 lg:gap-x-8 gap-y-2 lg:gap-y-4'
     >
       <div>
