add id to contact section

--- a/src/sections/Contacto.astro
+++ b/src/sections/Contacto.astro
@@ -1,4 +1,5 @@
 <section
+  id='contacto'
   class='py-28 px-6 lg:px-0 min-h-screen bg-[url(/images/mobile/atardecer-en-la-bahia-de-chimbote.jpg)] lg:bg-[url(/images/puerto-de-chimbote.jpg)] relative bg-cover bg-center'
 >
   <div class='relative max-w-[30rem] mx-auto text-white lg:text-[#333]'>
