--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
 import Layout from '@/layouts/Layout.astro'
-import Aliados from '@/sections/Aliados.astro'
-import Contacto from '@/sections/Contacto.astro'
-import Creaciones from '@/sections/Creaciones.astro'
-import Equipo from '@/sections/Equipo.astro'
-import Hero from '@/sections/Hero.astro'
-import Introduction from '@/sections/Introduction.astro'
-import Proceso from '@/sections/Proceso.astro'
-import Productos from '@/sections/Productos.astro'
+import Aliados from '@/sections/home/Aliados.astro'
+import Contacto from '@/sections/home/Contacto.astro'
+import Creaciones from '@/sections/home/Creaciones.astro'
+import Equipo from '@/sections/home/Equipo.astro'
+import Hero from '@/sections/home/Hero.astro'
+import Introduction from '@/sections/home/Introduction.astro'
+import Proceso from '@/sections/home/Proceso.astro'
+import Productos from '@/sections/home/Productos.astro'
 ---
 
 <Layout title='Chimboteros Perú | Creaciones Culturales'>
