add introduction section

--- a/src/pages/aldea.astro
+++ b/src/pages/aldea.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from '@/layouts/Layout.astro'
 import Hero from '@/sections/aldea/Hero.astro'
+import Introduction from '@/sections/aldea/Introduction.astro'
 ---
 
 <Layout title='Aldea | Arquitectura Cultural'>
   <Hero />
+  <Introduction />
 </Layout>
