refactor global styles and add absoluteCenter utility class

--- a/src/sections/home/Contacto.astro
+++ b/src/sections/home/Contacto.astro
@@ -15,35 +15,35 @@
       class='relative lg:static top-48 lg:top-0 w-10/12 mx-auto grid lg:grid-cols-2 lg:gap-x-8 gap-y-2 lg:gap-y-4'
     >
       <div>
-        <label for='fullName' class='formLabel'>Nombres:</label>
+        <label for='fullName' class='form-label'>Nombres:</label>
         <input
           type='text'
           id='fullName'
           name='fullName'
-          class='formInput'
+          class='form-input'
           required
         />
       </div>
 
       <div>
-        <label for='email' class='formLabel'>Correo:</label>
+        <label for='email' class='form-label'>Correo:</label>
         <input
           type='email'
           id='email'
           name='email'
-          class='formInput'
+          class='form-input'
           required
         />
       </div>
 
       <div class='lg:col-span-2 [&>textarea]:rounded-2xl'>
-        <label for='message' class='formLabel'>Mensaje:</label>
+        <label for='message' class='form-label'>Mensaje:</label>
         <textarea
           id='message'
           name='message'
           cols='30'
           rows='3'
-          class='formInput'
+          class='form-input'
           required></textarea>
       </div>
 
