--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @font-face {
   font-family: 'Neue';
   src: url(/fonts/NeueHaasDisplay-XThin.ttf);
@@ -29,15 +33,25 @@
   font-weight: 700;
 }
 
-html {
-  font-family: 'neue';
-  scroll-behavior: smooth;
+@layer base {
+  html {
+    font-family: 'neue';
+    scroll-behavior: smooth;
+  }
 }
 
-.formLabel {
-  @apply text-white lg:text-[#333] inline-block mb-2 text-base lg:text-xl;
+@layer components {
+  .form-label {
+    @apply text-white lg:text-[#333] inline-block mb-2 text-base lg:text-xl;
+  }
+
+  .form-input {
+    @apply text-sm lg:text-base w-full outline-none rounded-full py-2 px-3 lg:px-4 opacity-70;
+  }
 }
 
-.formInput {
-  @apply text-sm lg:text-base w-full outline-none rounded-full py-2 px-3 lg:px-4 opacity-70;
+@layer utilities {
+  .absolute-center {
+    @apply absolute top-1/2 left-1/2 -translate-y-1/2 -translate-x-1/2;
+  }
 }
