add propósito section

--- a/src/pages/aldea.astro
+++ b/src/pages/aldea.astro
@@ -2,9 +2,11 @@
 import Layout from '@/layouts/Layout.astro'
 import Hero from '@/sections/aldea/Hero.astro'
 import Introduction from '@/sections/aldea/Introduction.astro'
+import Propósito from '@/sections/aldea/Propósito.astro'
 ---
 
 <Layout title='Aldea | Arquitectura Cultural'>
   <Hero />
   <Introduction />
+  <Propósito />
 </Layout>
