add talleres section

--- a/src/pages/aldea.astro
+++ b/src/pages/aldea.astro
@@ -3,10 +3,12 @@ import Layout from '@/layouts/Layout.astro'
 import Hero from '@/sections/aldea/Hero.astro'
 import Introduction from '@/sections/aldea/Introduction.astro'
 import Propósito from '@/sections/aldea/Propósito.astro'
+import Talleres from '@/sections/aldea/Talleres.astro'
 ---
 
 <Layout title='Aldea | Arquitectura Cultural'>
   <Hero />
   <Introduction />
   <Propósito />
+  <Talleres />
 </Layout>
