--- a/src/pages/aldea.astro
+++ b/src/pages/aldea.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '@/layouts/Layout.astro'
+import Expediciones from '@/sections/aldea/Expediciones.astro'
 import Hero from '@/sections/aldea/Hero.astro'
 import Introduction from '@/sections/aldea/Introduction.astro'
 import Propósito from '@/sections/aldea/Propósito.astro'
@@ -11,4 +12,5 @@ import Talleres from '@/sections/aldea/Talleres.astro'
   <Introduction />
   <Propósito />
   <Talleres />
+  <Expediciones />
 </Layout>
