change text color

--- a/src/sections/aldea/Talleres.astro
+++ b/src/sections/aldea/Talleres.astro
@@ -14,7 +14,7 @@ const workshops = [
     </small>
   </div>
 
-  <div class='relative p-8'>
+  <div class='relative p-8 text-[#1A1A1A]'>
     <div
       class='w-[30rem] max-w-fit lg:max-w-full mx-auto lg:absolute-center md:text-center lg:text-left'
     >
