--- a/src/sections/aldea/Propósito.astro
+++ b/src/sections/aldea/Propósito.astro
@@ -17,7 +17,7 @@ const features = [
 ---
 
 <section id='propósito' class='grid lg:grid-cols-2 border-t lg:border-t-0'>
-  <div class='relative p-8'>
+  <div class='relative p-8 text-[#1A1A1A]'>
     <div
       class='w-[30rem] max-w-fit lg:max-w-full mx-auto lg:absolute-center md:text-center lg:text-left'
     >
