--- a/src/sections/aldea/Talleres.astro
+++ b/src/sections/aldea/Talleres.astro
@@ -14,13 +14,15 @@ const workshops = [
     </small>
   </div>
 
-  <div class='relative p-8 text-[#1A1A1A]'>
+  <div class='relative py-14 px-10 text-[#1A1A1A]'>
     <div
       class='w-[30rem] max-w-fit lg:max-w-full mx-auto lg:absolute-center md:text-center lg:text-left'
     >
-      <div class='mb-10'>
-        <h2 class='text-2xl lg:text-5xl font-medium mb-1'>Talleres</h2>
-        <em class='text-lg lg:text-2xl mb-5 inline-block'>Currícula creativa</em
+      <div class='text-center lg:text-left mb-10'>
+        <h2 class='text-3xl lg:text-5xl font-medium lg:mb-1'>Talleres</h2>
+        <em
+          class='text-lg lg:text-2xl mb-3 lg:mb-5 inline-block text-[#7B7B7B] lg:text-inherit'
+          >Currícula creativa</em
         >
         <p class='text-base lg:text-lg'>
           Capacitaciones en áreas complementarias a la técnica arquitectónica
