--- a/src/pages/aldea.astro
+++ b/src/pages/aldea.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '@/layouts/Layout.astro'
+import Convocatoria from '@/sections/aldea/Convocatoria.astro'
 import Expediciones from '@/sections/aldea/Expediciones.astro'
 import Hero from '@/sections/aldea/Hero.astro'
 import Introduction from '@/sections/aldea/Introduction.astro'
@@ -13,4 +14,5 @@ import Talleres from '@/sections/aldea/Talleres.astro'
   <Propósito />
   <Talleres />
   <Expediciones />
+  <Convocatoria />
 </Layout>
