add beneficios section

--- a/src/pages/aldea.astro
+++ b/src/pages/aldea.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '@/layouts/Layout.astro'
+import Beneficios from '@/sections/aldea/Beneficios.astro'
 import Convocatoria from '@/sections/aldea/Convocatoria.astro'
 import Expediciones from '@/sections/aldea/Expediciones.astro'
 import Hero from '@/sections/aldea/Hero.astro'
@@ -15,4 +16,5 @@ import Talleres from '@/sections/aldea/Talleres.astro'
   <Talleres />
   <Expediciones />
   <Convocatoria />
+  <Beneficios />
 </Layout>
