add rutas section

--- a/src/pages/aldea.astro
+++ b/src/pages/aldea.astro
@@ -6,6 +6,7 @@ import Expediciones from '@/sections/aldea/Expediciones.astro'
 import Hero from '@/sections/aldea/Hero.astro'
 import Introduction from '@/sections/aldea/Introduction.astro'
 import Propósito from '@/sections/aldea/Propósito.astro'
+import Rutas from '@/sections/aldea/Rutas.astro'
 import Talleres from '@/sections/aldea/Talleres.astro'
 ---
 
@@ -17,4 +18,5 @@ import Talleres from '@/sections/aldea/Talleres.astro'
   <Expediciones />
   <Convocatoria />
   <Beneficios />
+  <Rutas />
 </Layout>
