increase title font size for desktop devices

--- a/src/components/aldea/Heading.astro
+++ b/src/components/aldea/Heading.astro
@@ -8,7 +8,7 @@ export interface Props {
 const { title, subtitle, description } = Astro.props as Props
 ---
 
-<h2 class='text-3xl lg:text-5xl font-medium lg:mb-1'>{title}</h2>
+<h2 class='text-3xl lg:text-[3.4rem] font-medium lg:mb-[12px]'>{title}</h2>
 <em
   class='text-lg lg:text-2xl mb-3 lg:mb-5 inline-block text-[#7B7B7B] lg:text-inherit'
   >{subtitle}
