add equipo section

--- a/src/pages/aldea.astro
+++ b/src/pages/aldea.astro
@@ -8,6 +8,7 @@ import Introduction from '@/sections/aldea/Introduction.astro'
 import Propósito from '@/sections/aldea/Propósito.astro'
 import Rutas from '@/sections/aldea/Rutas.astro'
 import Talleres from '@/sections/aldea/Talleres.astro'
+import Equipo from '@/sections/aldea/Equipo.astro'
 ---
 
 <Layout title='Aldea | Arquitectura Cultural'>
@@ -19,4 +20,5 @@ import Talleres from '@/sections/aldea/Talleres.astro'
   <Convocatoria />
   <Beneficios />
   <Rutas />
+  <Equipo />
 </Layout>
