add festividad section

--- a/src/pages/aldea.astro
+++ b/src/pages/aldea.astro
@@ -9,6 +9,7 @@ import Propósito from '@/sections/aldea/Propósito.astro'
 import Rutas from '@/sections/aldea/Rutas.astro'
 import Talleres from '@/sections/aldea/Talleres.astro'
 import Equipo from '@/sections/aldea/Equipo.astro'
+import Festividad from '@/sections/aldea/Festividad.astro'
 ---
 
 <Layout title='Aldea | Arquitectura Cultural'>
@@ -21,4 +22,5 @@ import Equipo from '@/sections/aldea/Equipo.astro'
   <Beneficios />
   <Rutas />
   <Equipo />
+  <Festividad />
 </Layout>
