make footer a separate component

--- a/src/sections/home/Contacto.astro
+++ b/src/sections/home/Contacto.astro
@@ -1,3 +1,7 @@
+---
+import Footer from '@/components/Footer.astro'
+---
+
 <section
   id='contacto'
   class='py-28 px-6 lg:px-0 min-h-screen bg-[url(/images/mobile/atardecer-en-la-bahia-de-chimbote.jpg)] lg:bg-[url(/images/puerto-de-chimbote.jpg)] relative bg-cover bg-center'
@@ -55,9 +59,5 @@
     </form>
   </div>
 
-  <footer
-    class='absolute bottom-0 left-0 w-full text-white bg-[#000] text-sm lg:text-base text-center py-5'
-  >
-    Jr. Ladislao Espinar 529 Oficina n° 26. Chimbote, Perú.
-  </footer>
+  <Footer />
 </section>
