add contacto section

--- a/src/pages/aldea.astro
+++ b/src/pages/aldea.astro
@@ -10,6 +10,7 @@ import Rutas from '@/sections/aldea/Rutas.astro'
 import Talleres from '@/sections/aldea/Talleres.astro'
 import Equipo from '@/sections/aldea/Equipo.astro'
 import Festividad from '@/sections/aldea/Festividad.astro'
+import Contacto from '@/sections/aldea/Contacto.astro'
 ---
 
 <Layout title='Aldea | Arquitectura Cultural'>
@@ -23,4 +24,5 @@ import Festividad from '@/sections/aldea/Festividad.astro'
   <Rutas />
   <Equipo />
   <Festividad />
+  <Contacto />
 </Layout>
