--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -52,6 +52,14 @@
   .form-input {
     @apply text-sm lg:text-base w-full outline-none rounded-full py-2 px-3 lg:px-4 opacity-70;
   }
+
+  .aldea-form-input {
+    @apply rounded-full py-2 px-4 bg-white border border-[#1A1A1A] w-full outline-none;
+  }
+
+  .aldea-form-label {
+    @apply inline-block mb-2 text-lg;
+  }
 }
 
 @layer utilities {
