--- a/src/sections/home/Hero.astro
+++ b/src/sections/home/Hero.astro
@@ -1,12 +1,22 @@
 ---
 import Header from '@/components/Header.astro'
+
+const menuItems = [
+  'propósito',
+  'creaciones',
+  'proceso',
+  'productos',
+  'equipo',
+  'aliados',
+  'contacto'
+]
 ---
 
 <section
   id='hero'
   class='h-screen lg:h-[105rem] bg-[url("/images/mobile/pescador-chimbotero.jpg")] lg:bg-[url("/images/chimbotero.jpg")] bg-cover bg-center'
 >
-  <Header />
+  <Header menuItems={menuItems} />
 
   <div
     class='w-9/12 lg:w-5/12 h-28 lg:h-52 mx-auto top-44 relative bg-[url("/images/mobile/chimboteros-logo.png")] lg:bg-[url("/images/chimboteros-logo.png")] bg-contain bg-center bg-no-repeat'
