refactor and small fixes

--- a/src/sections/aldea/Contacto.astro
+++ b/src/sections/aldea/Contacto.astro
@@ -52,7 +52,7 @@ import Footer from '@/components/Footer.astro'
 
     <button
       type='submit'
-      class='md:col-span-2 mx-auto py-2 px-6 bg-[#1A1A1A] hover:bg-white transition duration-200 text-white hover:text-[#1A1A1A] border hover:border-[#1a1a1a] rounded-full'
+      class='md:col-span-2 mx-auto py-2 px-6 text-white bg-[#1A1A1A] hover:bg-[#494747] transition duration-200 rounded-full'
     >
       Enviar
     </button>
