--- a/src/sections/aldea/Convocatoria.astro
+++ b/src/sections/aldea/Convocatoria.astro
@@ -30,17 +30,17 @@ const events = [
   </div>
 
   <div class='mx-auto flex flex-col gap-5 items-center'>
-    <h3 class='text-3xl font-medium text-center'>Cronograma</h3>
+    <h3 class='text-2xl lg:text-3xl font-medium text-center'>Cronograma</h3>
     <div class='border-t-[1.5px] border-b-[1.5px] py-7 px-5 border-[#808183]'>
       <ul class='flex flex-col gap-2'>
         {
           events.map(({ name, date }) => (
-            <li class='grid lg:grid-cols-[minmax(0,19rem)_minmax(0,1fr)] gap-2 text-center'>
+            <li class='grid lg:grid-cols-[minmax(0,19.5rem)_minmax(0,1fr)] gap-3 text-center lg:text-left'>
               <p class='lg:flex justify-between font-medium'>
                 {name}
                 <span>:</span>
               </p>
-              <p class=''>{date}</p>
+              <p>{date}</p>
             </li>
           ))
         }
