--- a/src/sections/aldea/Propósito.astro
+++ b/src/sections/aldea/Propósito.astro
@@ -1,4 +1,6 @@
 ---
+import Heading from '@/components/aldea/Heading.astro'
+
 const features = [
   {
     name: 'visión',
@@ -17,15 +19,12 @@ const features = [
 ---
 
 <section id='propósito' class='grid lg:grid-cols-2 border-t lg:border-t-0'>
-  <div class='relative py-14 px-10 text-[#1A1A1A]'>
+  <div class='relative py-14 px-10'>
     <div
       class='w-[30rem] max-w-fit lg:max-w-full mx-auto lg:absolute-center md:text-center lg:text-left'
     >
       <div class='text-center lg:text-left mb-10'>
-        <h2 class='text-3xl lg:text-5xl font-medium lg:mb-1'>Propósito</h2>
-        <em class='text-lg lg:text-2xl text-[#7B7B7B] lg:text-inherit'
-          >Arquitectura Cultural</em
-        >
+        <Heading title='Propósito' subtitle='Arquitectura Cultural' />
       </div>
 
       <ul class='w-full flex flex-col gap-10'>
