remove special characters on images

--- a/src/sections/aldea/Festividad.astro
+++ b/src/sections/aldea/Festividad.astro
@@ -1,10 +1,10 @@
 <section
   id='festividad'
-  class='h-[62rem] md:h-[55rem] lg:h-[70rem] py-20 lg:py-28 px-10 bg-[url(/images/aldea/malecón-la-caleta.jpg)] bg-cover bg-center relative'
+  class='h-[62rem] md:h-[55rem] lg:h-[70rem] py-20 lg:py-28 px-10 bg-[url(/images/aldea/malecon-la-caleta.jpg)] bg-cover bg-center relative'
 >
   <div class='max-w-[50rem] mx-auto'>
     <img
-      src='/images/aldea/sueños-de-libertad.png'
+      src='/images/aldea/suenos-de-libertad.png'
       alt='slogan sueños de libertad'
       class='max-w-[12rem] md:max-w-[13.5rem] lg:max-w-[20rem] mx-auto mb-5'
     />
