--- a/src/sections/aldea/Rutas.astro
+++ b/src/sections/aldea/Rutas.astro
@@ -59,7 +59,7 @@ const routes = [
 
   <div class='relative'>
     <img
-      src='/images/aldea/estación-del-ferrocarril.jpg'
+      src='/images/aldea/estacion-del-ferrocarril.jpg'
       alt='estación del ferrocarril de chimbote'
     />
     <small class='absolute bottom-4 left-5 text-xs text-[#eee]'>
