--- a/src/sections/aldea/Hero.astro
+++ b/src/sections/aldea/Hero.astro
@@ -16,12 +16,12 @@ const menuItems = [
 
 <section
   id='hero'
-  class='min-h-[52rem] h-screen bg-[url(/images/aldea/hotel-de-turistas-chimbote.jpg)] bg-center bg-cover'
+  class='min-h-[52rem] h-screen lg:h-[75rem] bg-[url(/images/aldea/hotel-de-turistas-chimbote.jpg)] bg-center bg-cover'
 >
   <Header menuItems={menuItems} />
 
   <div
-    class='max-w-[24rem] mx-auto relative top-24 lg:top-32 text-[#1A1A1A] text-center'
+    class='max-w-[24rem] mx-auto relative top-24 lg:top-36 text-[#1A1A1A] text-center'
   >
     <h1 class='text-5xl lg:text-7xl font-medium'>Aldea</h1>
     <em class='text-2xl lg:text-4xl mb-5 lg:mb-10 block'
