add auspicia section

--- a/src/pages/aldea.astro
+++ b/src/pages/aldea.astro
@@ -11,6 +11,7 @@ import Talleres from '@/sections/aldea/Talleres.astro'
 import Equipo from '@/sections/aldea/Equipo.astro'
 import Festividad from '@/sections/aldea/Festividad.astro'
 import Contacto from '@/sections/aldea/Contacto.astro'
+import Auspicia from '@/sections/aldea/Auspicia.astro'
 ---
 
 <Layout title='Aldea | Arquitectura Cultural'>
@@ -24,5 +25,6 @@ import Contacto from '@/sections/aldea/Contacto.astro'
   <Rutas />
   <Equipo />
   <Festividad />
+  <Auspicia />
   <Contacto />
 </Layout>
