--- a/src/sections/aldea/Convocatoria.astro
+++ b/src/sections/aldea/Convocatoria.astro
@@ -19,9 +19,12 @@ const events = [
 
 <section
   id='convocatoria'
-  class='h-[88rem] md:h-[85rem] py-24 px-10 bg-[url(/images/aldea/mobile/plaza-de-armas-de-chimbote.jpg)] md:bg-[url(/images/aldea/plaza-de-armas-de-chimbote.jpg)] bg-[length:100%] bg-bottom lg:bg-cover lg:bg-center bg-no-repeat relative'
+  class='h-[88rem] md:h-[85rem] py-14 lg:py-24 bg-[url(/images/aldea/mobile/plaza-de-armas-de-chimbote.jpg)] md:bg-[url(/images/aldea/plaza-de-armas-de-chimbote.jpg)] bg-[length:100%] bg-bottom lg:bg-cover lg:bg-center bg-no-repeat relative'
 >
-  <div class='max-w-[40rem] mx-auto text-center [&>p]:text-base mb-8'>
+  <img src='/images/aldea/cinta.png' alt='cinta' class='absolute top-0' />
+  <div
+    class='max-w-[45rem] mx-auto text-center [&>p]:text-base md:mt-6 lg:mt-8 mb-8 px-8'
+  >
     <Heading
       title='Convocatoria'
       subtitle='Cronograma de postulación'
