--- a/src/sections/aldea/Equipo.astro
+++ b/src/sections/aldea/Equipo.astro
@@ -35,9 +35,12 @@ const teamMembers = [
 ]
 ---
 
-<section id='equipo'>
+<section id='equipo' class='relative'>
+  <img src='/images/aldea/cinta.png' alt='cinta' class='absolute top-0' />
   <div class='py-14 lg:py-28 px-10'>
-    <div class='max-w-[40rem] mx-auto text-center mb-12 lg:mb-20'>
+    <div
+      class='max-w-[40rem] mx-auto text-center md:mt-6 lg:mt-8 mb-12 lg:mb-20'
+    >
       <Heading
         title='Equipo Creativo'
         subtitle='Valores compartidos, una visión común'
