--- a/src/sections/aldea/Introduction.astro
+++ b/src/sections/aldea/Introduction.astro
@@ -1,4 +1,4 @@
-<section class='py-16 lg:py-28 px-8'>
+<section class='relative py-16 lg:py-28'>
   <div class='max-w-max mx-auto mb-8 text-center'>
     <h2 class='text-3xl lg:text-5xl text-[#34CC66] font-medium leading-[1.2]'>
       Mística Ciudad
@@ -8,7 +8,7 @@
     >
   </div>
   <p
-    class='max-w-[55rem] mx-auto text-[#282828] lg:columns-2 gap-10 text-justify'
+    class='max-w-[60rem] mx-auto text-[#282828] lg:columns-2 gap-10 text-justify px-8 mb-4 lg:mb-8'
   >
     Chimbote, una sociedad que surge con la construcción del ferrocarril, la
     pesca a gran escala y la siderurgia. Industrias generadoras de trabajo
@@ -27,4 +27,5 @@
     valores y patrimonios, hasta el logro de un nuevo estilo estético auténtico,
     que defina nuestra identidad, a través de la arquitectura cultural.
   </p>
+  <img src='/images/aldea/cinta.png' alt='cinta' class='absolute bottom-0' />
 </section>
